resolve home page link

--- a/html/2020-09-11-fairy-castles.html
+++ b/html/2020-09-11-fairy-castles.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="../css/styles.css">
 
 </head>
-<body><nav><a href='../sujato.html#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
+<body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
 <header id="title-block-header">
 <h1 class="title">Fairy castles</h1>
 <p class="author">Bhante Sujato</p>
