--- a/html/2024-11-25-ai-government.html
+++ b/html/2024-11-25-ai-government.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="../css/styles.css">
 
 </head>
-<body><nav><a href='../sujato.html#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
+<body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
 <header id="title-block-header">
 <h1 class="title">the union of the two towers—how to build a government
 out of ai</h1>
