--- a/html/2024-11-7-risky-business.html
+++ b/html/2024-11-7-risky-business.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="../css/styles.css">
 
 </head>
-<body><nav><a href='../sujato.html#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
+<body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
 <header id="title-block-header">
 <h1 class="title">Risky Business—secular materialism is the philosophy
 of the apocalypse</h1>
