--- a/html/dharani-lake.html
+++ b/html/dharani-lake.html
@@ -10,7 +10,7 @@
 	<style>
 	</style>
 </head>
-<body><nav><a href='../sujato.html#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main>
+<body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main>
 
 	
 		<article>
