--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ line-height: 1.2;
 <li><a href='html/2024-11-13-into-the-woods.html'>Into The Woods: ai is not therapy</a></li>
 <li><a href='html/2024-11-14-machine-worse.html'>Machines Make Everything Worse</a></li>
 <li><a href='html/2024-11-25-ai-government.html'>How to Make a Government Out Of AI</a></li>
+<li><a href='html/2025-01-17-mein-kampf.html'>on reading <cite>Mein Kampf</cite></a></li>
 			</ul>
 </section>
 </section>
