update home page

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ line-height: 1.2;
 				<li>I teach Dhamma and meditation. Details <a href=''>here</a>.</li>
 				<li>I translate Pali texts into English, which are published on <a href='https://suttacentral.net'>SuttaCentral</a>.</li>
 				<li>Likes: reality, nature, kindness. </li>
-				<li>Dislikes: industrialization, bigotry, killing.</li>
+				<li>Dislikes: industrialization, bigotry, killing, AI.</li>
 			</ul>
 			<picture>
 				<img src="img/sujato-venabu-2024.jpg" alt="Bhante Sujato in monks robes, seated in a chair, next to a small shrine, teaching meditation to a group of people">
@@ -146,7 +146,7 @@ line-height: 1.2;
 		</section>
 		<section class='biography'>
 			<h2>about this site</h2>
-		<p>I’ve thought about gathering all my writings together for quite some time, but never really found a satisfying tech solution. Eventually I thought, “Why not no solution at all?” and here we are.</p><p>Nothing in this site is automated. Everything is written in a text editor. It’s served at a Github URL because that will probably last long. The entire site consists of a folder with a bunch of HTML files, with some CSS and images. </p><p>You’re welcome to download the whole thing from Github and do whatever you want with it. Except AI. </p><p>This page is for navigation. To search the site, try using site search in a standard search engine, or else download the files and search them locally with Sublime Text or something.</p>
+		<p>I’ve thought about gathering all my writings together for quite some time, but never really found a satisfying tech solution. Eventually I thought, “Why not no solution at all?” and here we are.</p><p>Nothing in this site is automated. Everything is written in a text editor. The entire site consists of a folder with a bunch of HTML files, with some CSS and images. </p><p>You’re welcome to <a href='https://github.com/sujato/sujato/archive/refs/heads/main.zip'>download the whole thing from Github</a> and do whatever you want with it. Except AI. </p><p>This page is for navigation. To search the site, try using site search in a standard search engine, or else download the files and search them locally with Sublime Text or something.</p>
 		</section>
 	</section>
 	<section id='mainmatter'>
