--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ line-height: 1.2;
 		</section>
 			<section class='minisite'>
 				
-				<a href='https://sujato.github.io/harbingers/'><h3>The Harbingers</h3></a>
+				<a href='/harbingers/'><h3>The Harbingers</h3></a>
 				<p>When the world falls apart, does anything stay in place? What if the survivors were those who have already lost everything? This is a story about life at the end of the world in Parramatta. It is a fairy tale of apocalypse, a cli-fi novel of despair and enlightenment for the reasonably hopeless.</p>
 			</section>
 
