--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ line-height: 1.2;
 			<h3>pali—miscellaneous discussions</h3>
 			<p>Over the years I have written numerous essays, short and longish, discussing various aspects of Pali, mostly dealing with translation issues. These were mostly originally published on the SuttaCentral forum, and here I collect them.</p>
 			<ul>
-				<li><a href='html/dharani-lake.html'>Lake Dharani; or, when the earth is a lake</a></li>
+				<li><a href='dharani-lake'>Lake Dharani; or, when the earth is a lake</a></li>
 			</ul>
 </section>
 		<section class='essays'>
