--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ line-height: 1.2;
 			<p>Things that never happened. Probably just as well, really. These are few stories that have come to me over the years. </p>
 			<ul>
 				<li><a href='html/2020-09-11-fairy-castles.html'>fairy castles</a></li>
-<li><a href='html/2021-02-04-puddytat.html'>puddytat</a></li>
+<li><a href='html/2021-02-04-puddytat'>puddytat</a></li>
 <li><a href='html/2022-03-16-bookkeeper.html'>the bookkeeper and the bees</a></li>
 			</ul>
 		</section>
