make flat html file structure

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ line-height: 1.2;
 			<h3>fables</h3>
 			<p>Things that never happened. Probably just as well, really. These are few stories that have come to me over the years. </p>
 			<ul>
-				<li><a href='html/2020-09-11-fairy-castles.html'>fairy castles</a></li>
-<li><a href='html/2021-02-04-puddytat'>puddytat</a></li>
-<li><a href='html/2022-03-16-bookkeeper.html'>the bookkeeper and the bees</a></li>
+				<li><a href='fairy-castles.html'>fairy castles</a></li>
+<li><a href='puddytat.html'>puddytat</a></li>
+<li><a href='bookkeeper.html'>the bookkeeper and the bees</a></li>
 			</ul>
 		</section>
 			<section class='minisite'>
@@ -182,15 +182,15 @@ line-height: 1.2;
 			<h3>escalating global chaos aka climate change</h3>
 			<p>As the world ends, what is left for us to do but to do the right thing? The Buddha taught that all things are in a constant state of change; that the climate is no exception, as it too changes over time; and that climate change is driven by human greed. He also taught us the solution—contentment and renunciation. Yet, even though millions of people live lives of contentment and simplicity, to those in power it is unthinkable. It is easier to imagine the end of the world than the end of consumerism. </p>
 			<ul>
-<li><a href='html/2019-06-28-gurrangatch.html'>The serpent Gurrangatch and the hunter Mirragan</a> The aboriginal myth of Gurrangatch and Mirragan tells of a time when the land of the Blue Mountains was shaped in the struggle for life, a struggle marked by both passion and restraint. </li>
-<li><a href='html/2020-02-22-things-as-they-are.html'>Things As They Are</a> A Buddhist monk’s view of the climate emergency. UPDATE 2024: it’s worse. </li>
-<li><a href='html/2021-07-06-changemakers.html'>Changemakers</a>For all those who want a better world, and wonder why it seems so hard.</li>
-<li><a href='html/2022-10-29-is-this-our-doom.html'>Is This Our Doom?</a>Let us follow it through. What happens when things get bad?</li>
-<li><a href='html/2020-09-22-doom-boom.html'>I’d Rather be a Doomer Than a Boomer</a>Elders of the climate community scold youngsters for their doomerism. But we failed them, and doom is a reasonable response to the world we created.</li>
-<li><a href='html/2019-06-04-right-thing.html'>The Right Thing To Do</a>If the world really is coming to an end, how do I want to live today? Do we really need a fantasy of the future in order to be decent people? Is it not enough to do the right thing because it’s the right thing to do?</li>
-<li><a href='html/2019-05-08-how-to-read-end-world.html'>How to Read About the End of the World</a>Media accounts try to depict climate change in balanced terms, the good and the bad. But when examined closely, the bad is fact, while the good is fantasy.</li>
-<li><a href='html/2019-01-21-oceans-heat.html'>As the Oceans Heat Up</a>While we dally and debate, the world is heating at an incredible rate. Most of the heat is absorbed by the oceans where we cannot directly feel it, but that does not make it any less dangerous.</li>
-<li><a href='html/2024-11-7-risky-business.html'>Risky Business—secular materialism is the philosophy of the apocalypse</a>We have relentlessly scoured the sacred from the world, scoffing at those who worship the sky and the rivers. Yet none of the supposedly benighted superstitions of the past bequeathed us a planet decimated with ruin.</li>
+<li><a href='gurrangatch.html'>The serpent Gurrangatch and the hunter Mirragan</a> The aboriginal myth of Gurrangatch and Mirragan tells of a time when the land of the Blue Mountains was shaped in the struggle for life, a struggle marked by both passion and restraint. </li>
+<li><a href='things-as-they-are.html'>Things As They Are</a> A Buddhist monk’s view of the climate emergency. UPDATE 2024: it’s worse. </li>
+<li><a href='changemakers.html'>Changemakers</a>For all those who want a better world, and wonder why it seems so hard.</li>
+<li><a href='is-this-our-doom.html'>Is This Our Doom?</a>Let us follow it through. What happens when things get bad?</li>
+<li><a href='doom-boom.html'>I’d Rather be a Doomer Than a Boomer</a>Elders of the climate community scold youngsters for their doomerism. But we failed them, and doom is a reasonable response to the world we created.</li>
+<li><a href='right-thing.html'>The Right Thing To Do</a>If the world really is coming to an end, how do I want to live today? Do we really need a fantasy of the future in order to be decent people? Is it not enough to do the right thing because it’s the right thing to do?</li>
+<li><a href='how-to-read-end-world.html'>How to Read About the End of the World</a>Media accounts try to depict climate change in balanced terms, the good and the bad. But when examined closely, the bad is fact, while the good is fantasy.</li>
+<li><a href='oceans-heat.html'>As the Oceans Heat Up</a>While we dally and debate, the world is heating at an incredible rate. Most of the heat is absorbed by the oceans where we cannot directly feel it, but that does not make it any less dangerous.</li>
+<li><a href='risky-business.html'>Risky Business—secular materialism is the philosophy of the apocalypse</a>We have relentlessly scoured the sacred from the world, scoffing at those who worship the sky and the rivers. Yet none of the supposedly benighted superstitions of the past bequeathed us a planet decimated with ruin.</li>
 			</ul>
 </section>
 <section class='minisite'>
@@ -198,10 +198,10 @@ line-height: 1.2;
 			<p>AI plagiarizes the meaningful work of humans, grinds it into paste, and extrudes it as a probabilistically-determined stream of data. It has no inner life and hence no meaning. It is bad at most things. We'd be better off without it. </p>
 			<p>Meaningless.ai is a minisite that collects my writings on AI, most of which were originally published on the SuttaCentral forum. </p>
 			<ul>
-<li><a href='html/2024-11-13-into-the-woods.html'>Into The Woods: ai is not therapy</a></li>
-<li><a href='html/2024-11-14-machine-worse.html'>Machines Make Everything Worse</a></li>
-<li><a href='html/2024-11-25-ai-government.html'>How to Make a Government Out Of AI</a></li>
-<li><a href='html/2025-01-17-mein-kampf.html'>on reading <cite>Mein Kampf</cite></a></li>
+<li><a href='into-the-woods.html'>Into The Woods: ai is not therapy</a></li>
+<li><a href='machine-worse.html'>Machines Make Everything Worse</a></li>
+<li><a href='ai-government.html'>How to Make a Government Out Of AI</a></li>
+<li><a href='mein-kampf.html'>on reading <cite>Mein Kampf</cite></a></li>
 			</ul>
 </section>
 </section>
