--- a/things-as-they-are.html
+++ b/things-as-they-are.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Bhante Sujato" />
   <title>Things as they are</title>
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
