--- a/mein-kampf.html
+++ b/mein-kampf.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Bhikkhu Sujato" />
   <title>on reading Mein Kampf</title>
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
