make flat html file structure

--- a/risky-business.html
+++ b/risky-business.html
@@ -34,7 +34,7 @@ of our age.</p>
 grew from about 1800, as the effects of the industral revolution started
 to take off.</p>
 <figure>
-<img src="../img/gdp.png" alt="GDP estimates going back to 1400." />
+<img src="img/gdp.png" alt="GDP estimates going back to 1400." />
 <figcaption>
 Growth of wealth accelerated due to the industrial revolution.
 </figcaption>
@@ -43,7 +43,7 @@ Growth of wealth accelerated due to the industrial revolution.
 not without problems: inequality, poverty, exploitation of labor, and
 meaninglessness are all too readily apparent.</p>
 <figure>
-<img src="../img/sewers.jpg" alt="Factory workers sew clothes." />
+<img src="img/sewers.jpg" alt="Factory workers sew clothes." />
 <figcaption>
 The clothes on your back were, in all likelihood, made like this, by
 humans serving machines.
@@ -56,7 +56,7 @@ poisons of coal-powered industry. Now the same skies are relatively
 clear, not because we have learned better, but because globalization
 lets us shift the toxicity somewhere else.</p>
 <figure>
-<img src="../img/industrial-revolution.jpg" alt="English town in the industrial revolution" />
+<img src="img/industrial-revolution.jpg" alt="English town in the industrial revolution" />
 <figcaption>
 English factories of 1938 reveal the inhumanity of industrialization.
 </figcaption>
@@ -70,7 +70,7 @@ down upon us from the skies, or rise up from the ocean, or scorch
 through our forests, we can only imagine a response that includes the
 word “more”.</p>
 <figure>
-<img src="../img/morestuff.jpg" alt="People in a store fight over TVs" />
+<img src="img/morestuff.jpg" alt="People in a store fight over TVs" />
 <figcaption>
 We fight and struggle to secure brighter, clearer, bigger illusions with
 which to hide the truth.
@@ -84,7 +84,7 @@ not as a future of abundance and prosperity, but as a ruined planet
 where a fractured remnant of humanity scrabble to eke out a bare
 survival in lands once teeming with life.</p>
 <figure>
-<img src="../img/plastic.jpg" alt="Man works in pile of plastic bottles" />
+<img src="img/plastic.jpg" alt="Man works in pile of plastic bottles" />
 <figcaption>
 To build our future of endless possibilities, we reduce human beings to
 curators of toxic filth.
@@ -95,7 +95,7 @@ industrial revolution that gave the lucky ones cheap and abundant goods
 kicked off an unprecedented spike in global atmospheric CO2. The
 following image shows CO2 going back 800,000 years.</p>
 <figure>
-<img src="../img/co2-history-1061866375.png" alt="Line graph of global atmospheric CO2 for 800,000 years." />
+<img src="img/co2-history-1061866375.png" alt="Line graph of global atmospheric CO2 for 800,000 years." />
 <figcaption>
 Global atmospheric CO2 over the last 800,000 years. This brings us up to
 2019; in 2024 we are at 422 ppm, which breaks the limit of this graph.
@@ -130,7 +130,7 @@ telling the story of the human dream to fly, finally made possible by
 fossil fuel. In 1903, the Wright brothers made the first powered
 flight.</p>
 <figure>
-<img src="../img/First_flight2.jpg" alt="Wright brothers first flight in 1903." />
+<img src="img/First_flight2.jpg" alt="Wright brothers first flight in 1903." />
 <figcaption>
 The Wright Flyer was driven by a 12 horsepower engine fuelled with 3.8 L
 of gasoline.
@@ -139,7 +139,7 @@ of gasoline.
 <p>Launched in 1964 as a reconnaissance platform, the Lockheed SR-71
 Blackbird remains the fastest plane to fly.</p>
 <figure>
-<img src="../img/Sr71_1.jpg" alt="AR-71 Blackbird in flight." />
+<img src="img/Sr71_1.jpg" alt="AR-71 Blackbird in flight." />
 <figcaption>
 The SR-71 was propelled by two massive turbojets burning 46,255 L of
 specialized JP-7 jet fuel.
@@ -150,7 +150,7 @@ ambitious space vehicle ever built. It is the lynchpin of Elon Musk’s
 dream of establishing a permanent settlement on Mars as a first step
 towards colonizing the galaxy.</p>
 <figure>
-<img src="../img/SpaceX_Starship_ignition_during_IFT-5.jpg" alt="Starship at launch." />
+<img src="img/SpaceX_Starship_ignition_during_IFT-5.jpg" alt="Starship at launch." />
 <figcaption>
 Starship burns 1,000,000 kg of methane propellant each launch.
 </figcaption>
@@ -190,7 +190,7 @@ to the moon.</p>
 <p>The brilliance of science shines in its effects. And those effects
 are manifested in the world by machines that run on fossil fuels.</p>
 <figure>
-<img src="../img/Coal-Mining-Australia.jpg" alt="Coal mines in Australia." />
+<img src="img/Coal-Mining-Australia.jpg" alt="Coal mines in Australia." />
 <figcaption>
 Ancient forests preserved in the earth are plundered and burned to sate
 our desires; but our desires only grow.
@@ -222,7 +222,7 @@ been co-opted to colonize and supplant other ways of knowing.</p>
 <p>My point is a simple one. It is not science alone that has changed
 the world, but science powered by fossil fuels.</p>
 <figure>
-<img src="../img/pump.jpg" alt="A landscape of oil pumps." />
+<img src="img/pump.jpg" alt="A landscape of oil pumps." />
 <figcaption>
 We pump oil from the earth, appoint oilmen to lead the response to
 climate chaos, and then wonder why nothing seems to change.
@@ -239,7 +239,7 @@ trend of technology. We’ve grown embarrassed at our faith, and have
 given up any meaningful claim to speak of a reality beyond what science
 can reveal.</p>
 <figure>
-<img src="../img/house.jpg" alt="Country manor in flood waters." />
+<img src="img/house.jpg" alt="Country manor in flood waters." />
 <figcaption>
 Our homes, whose luxury rivals the palaces of the gods, offer no
 protection from the rise of the waters.
@@ -255,7 +255,7 @@ after 48 hours of debauchery, are we starting to worry that soon
 there’ll be hell to pay.</p>
 <p>Mum and dad are coming home.</p>
 <figure>
-<img src="../img/risky.jpg" alt="Porsche parked on a jetty." />
+<img src="img/risky.jpg" alt="Porsche parked on a jetty." />
 <figcaption>
 I really hope that jetty is good.
 </figcaption>
@@ -269,7 +269,7 @@ would worship the gods, make a sacrifice, and pray for the abundance of
 this year’s crop. They believed that if they lived well, and their
 leaders were righteous, they would flourish.</p>
 <figure>
-<img src="../img/yamuna.jpg" alt="Yamuna river covered with toxic foam." />
+<img src="img/yamuna.jpg" alt="Yamuna river covered with toxic foam." />
 <figcaption>
 People still need the sacred mother Yamuna, but she is covered in toxic
 scum.
@@ -281,7 +281,7 @@ with mighty machines. And sure, it worked for a while. Our population
 exploded, and somehow we could feed most of them. If we keep our head
 down and don’t ask too many questions, it seems to be going fine.</p>
 <figure>
-<img src="../img/farming.jpg" alt="Combine harvesters on a field of wheat." />
+<img src="img/farming.jpg" alt="Combine harvesters on a field of wheat." />
 <figcaption>
 Modern farming subjugates the earth with metal and machines powered by
 oil.
@@ -295,7 +295,7 @@ hunts naked in cities; when the endless expanses of wheatlands are
 reduced to howling dust. On that day, what oil-powered machine, what
 petrochemical will restore life to the lifeless earth?</p>
 <figure>
-<img src="../img/clear-sky-china.jpg" alt="." />
+<img src="img/clear-sky-china.jpg" alt="." />
 <figcaption>
 When even the sacred Air, the breath of the gods, who has selflessly
 given us oxygen to breath every moment of our lives, is utterly
@@ -316,7 +316,7 @@ big. We speak of the end of the world, our words laden with prophecy and
 portent. Yet our dooms are, in the end, domestic affairs, more local
 tragedy than global annihilation.</p>
 <figure>
-<img src="../img/forest.jpg" alt="A forest is clearfelled up to a line." />
+<img src="img/forest.jpg" alt="A forest is clearfelled up to a line." />
 <figcaption>
 We think we can save the planet by planting trees; but what is the point
 of planting new trees while we relentlessly annihilate the old?
@@ -337,7 +337,7 @@ shall the clouds gather as if for rain from the four quarters of the
 heavens, but they shall flee away without raining. (Jātaka 77)</p>
 </blockquote>
 <figure>
-<img src="../img/drought.jpg" alt="Farmer looks out on parched earth." />
+<img src="img/drought.jpg" alt="Farmer looks out on parched earth." />
 <figcaption>
 Once fertile land lies brutalized and dying.
 </figcaption>
@@ -365,7 +365,7 @@ Goddesses live in trees and flowers, and the moon is as divine as the
 rivers. Terrifying dragons inhabit the earth, while trolls lurk in lakes
 and fairies vanish in the deepness of the mountains.</p>
 <figure>
-<img src="../img/pinefire.jpg" alt="Australian bushfires." />
+<img src="img/pinefire.jpg" alt="Australian bushfires." />
 <figcaption>
 When the great god Agni is angered, he consumes all without let or
 mercy.
@@ -385,7 +385,7 @@ that mastery over matter leads to prosperity and abundance forever, an
 infinity of riches on a finite world—is this not the rankest, most base,
 most plainly delusional of superstitions?</p>
 <figure>
-<img src="../img/tornado.jpg" alt="A tornado reaches down." />
+<img src="img/tornado.jpg" alt="A tornado reaches down." />
 <figcaption>
 The hand of god reaches out to punish the Unbeliever.
 </figcaption>
@@ -399,7 +399,7 @@ only to change her mind at the last minute. If this is how the gods
 react to the felling of a single tree, what are they thinking now as
 they gaze upon the ruin of the world?</p>
 <figure>
-<img src="../img/apsara.jpg" alt="Nymph hidden in tree." />
+<img src="img/apsara.jpg" alt="Nymph hidden in tree." />
 <figcaption>
 At Ta Prohm Temple, Angkor, Cambodia, a nymph or apsara peeks out from a
 tree.
@@ -409,7 +409,7 @@ tree.
 humans’ reckless exploitation and pollution, sent a tsunami to sweep
 them all away.</p>
 <figure>
-<img src="../img/flood.jpg" alt="Hurricane in Florida." />
+<img src="img/flood.jpg" alt="Hurricane in Florida." />
 <figcaption>
 Against we who live in denial, the goddess of water, provoked, rises in
 anger to sweep away our homes, our lives, and our filth.
@@ -423,7 +423,7 @@ flowers, a spoon of rice, and some kind words. They asked so little and
 gave so much. If it were you, would you rise to the occasion and show
 infinite patience and forgiveness?</p>
 <figure>
-<img src="../img/gaza.jpg" alt="devastation of Gaza." />
+<img src="img/gaza.jpg" alt="devastation of Gaza." />
 <figcaption>
 The end will not be born of fire alone, nor of water or of storm, but of
 all these and more; and in their wake plague and war shall march under
