--- a/changemakers.html
+++ b/changemakers.html
@@ -14,7 +14,7 @@
 <h1 class="title">For the changemakers</h1>
 </header>
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>26 July, 2021</span>
 </aside>
 <p>This is how it goes.</p>
