--- a/gurrangatch.html
+++ b/gurrangatch.html
@@ -13,7 +13,7 @@
 <header id="title-block-header">
 <h1 class="title">The serpent Gurrangatch and the hunter Mirragan</h1>
 </header>
-<aside><span class="author">Bhante Sujato</span>
+<aside><span class="author">Bhikkhu Sujato</span>
   <span class='date'>28 June 2019</span>
 </aside>
 <p class="preamble">
