--- a/how-to-read-end-world.html
+++ b/how-to-read-end-world.html
@@ -14,7 +14,7 @@
 <h1 class="title">How to read about the end of the world</h1>
 </header>
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>8 May, 2019</span>
 </aside>
 <p>When reading about the harbingers of the end of the world—climate
