--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@ line-height: 1.2;
 		<section class='essays'>
 			
 	
+			<h3>other things</h3>
+			<p>Things that don’t fit elsewhere.</p>
+			<ul>
+				<li><a href='cowboys.html'>the cowboy and the modern man</a> Reflections on masculinity and myth.</li>
+			</ul>
+</section>
+		<section class='essays'>
+			
+	
 			<h3>fables</h3>
 			<p>Things that never happened. Probably just as well, really. These are few stories that have come to me over the years. </p>
 			<ul>
