--- a/is-this-our-doom.html
+++ b/is-this-our-doom.html
@@ -14,7 +14,7 @@
 <h1 class="title">is this our doom?</h1>
 </header>
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>29 October, 2022</span>
 </aside>
 <p>In 2019, <a href="2019-05-08-how-to-read-end-world.html">I
