--- a/mein-kampf.html
+++ b/mein-kampf.html
@@ -75,6 +75,10 @@
 <p>If you use AI, I’ll do what I can to avoid talking to you. I have only a few years left in this life. There are moons to see, breaths to feel, and humans to listen to. For a while.</p>
 
 <p>Soon, I’ll be gone. Looks like humans might be gone too. Killed by “just tools”, or rendered unknowable by Unthought. We had our day, I guess. It wasn’t all bad. At least for now I can enjoy the time of sunset with other people. Listening to my own heart. Still human after all these years.</p>
-</article></main>
+</article></main><footer>
+      <p>This site is written by hand with a text editor. All words are 100% human.</p>
+      <p>Copyright for all my work is Creative Commons Zero, which means you are legally permitted to do whatever you like with it.</p>
+      <p><b>Don’t use any of my work for AI.</b> <br>Lack of copyright doesn’t mean it’s okay to use for AI. It just means that I am not going to take you to court. It is up to you to act decently.</p>
+  </footer>
   </body>
 </html>
