--- a/oceans-heat.html
+++ b/oceans-heat.html
@@ -15,7 +15,7 @@
 </header>
 
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>21 January 2019</span>
 </aside>
 
