--- a/right-thing.html
+++ b/right-thing.html
@@ -15,7 +15,7 @@
 </header>
 
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>4 June 2019</span>
 </aside>
 <p>Those among you who accept the probability of the coming climate
