--- a/risky-business.html
+++ b/risky-business.html
@@ -16,7 +16,7 @@ of the apocalypse</h1>
 </header>
 
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>Late 2024</span>
 </aside>
 <ul>
