--- a/things-as-they-are.html
+++ b/things-as-they-are.html
@@ -14,7 +14,7 @@
 <h1 class="title">Things as they are</h1>
 </header>
 <aside>
-<span class="author">Bhante Sujato</span>
+<span class="author">Bhikkhu Sujato</span>
 <span class='date'>22 February, 2020</span>
 </aside>
 <p class="preamble">
