--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@ line-height: 1.2;
 		<section id='frontmatter'>
 		<section class='introduction'>
 			<p>Hi, my name is Sujato. I’m a Buddhist monk (or “<i>bhikkhu</i>”). For a while I have been writing and speaking on various matters more-or-less associated with Buddhism. Here I bring it all together as best I can.</p>
-					<p>I tend to write things that I don’t talk about. If you’re looking for meditation teachings or teachings on Buddhism, check out my recorded talks, or better, join our community in person or online. If you’re looking for technical discussions of Pali, or sci-fi novels, or critiques of AI, or discussions related to global warming, you’re in the right place. </p>
-			
-	
+					<p>I tend to write things that I don’t talk about. If you’re looking for meditation teachings or teachings on Buddhism, <a href='https://lokanta.live/'>check out my recorded talks</a>, or better, <a href='https://lokanta.github.io/'>join our community in person or online</a>. If you’re looking for technical discussions of Pali, or sci-fi novels, or critiques of AI, or discussions related to global warming, you’re in the right place. </p>
 		</section>
 		<section class='biography'>
 			<h2>about me</h2>
 			<ul>
-				<li>I teach Dhamma and meditation. Details <a href=''>here</a>.</li>
+				<li>Dhamma and meditation teachings in Sydney via <a href='https://lokanta.github.io/'>The Monastery at the End of the World</a>.</li>
 				<li>I translate Pali texts into English, which are published on <a href='https://suttacentral.net'>SuttaCentral</a>.</li>
-				<li>Likes: reality, nature, kindness. </li>
+				<li>I discuss matters relating to Pali and Buddhism on <a href='https://discourse.suttacentral.net/'><i>Discuss & Discover</i>, the SuttaCentral forum</a>.</li>
+				<li>For updates and (more or less) daily reflections, <a href='https://bsky.app/profile/sujato.bsky.social'>check out my Bluesky</a>.</li>
+				<li>Likes: Buddhism, reality, nature, kindness. </li>
 				<li>Dislikes: industrialization, bigotry, killing, AI.</li>
 			</ul>
 			<picture>
