--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ line-height: 1.2;
 			<h3>other things</h3>
 			<p>Things that don’t fit elsewhere.</p>
 			<ul>
+				<li><a href='nothing-here.html'>nothing here is what it once was</a> A Buddhist perspective in contribution to <em>Statements from the Soul: The Moral Case for the Uluru Statement from the Heart</em>.</li>
 				<li><a href='cowboys.html'>the cowboy and the modern man</a> Reflections on masculinity and myth.</li>
 			</ul>
 </section>
@@ -178,6 +179,7 @@ line-height: 1.2;
 			<h3>fables</h3>
 			<p>Things that never happened. Probably just as well, really. These are few stories that have come to me over the years. </p>
 			<ul>
+				<li><a href='square-ruins.html'>the square ruins</a></li>
 				<li><a href='fairy-castles.html'>fairy castles</a></li>
 <li><a href='puddytat.html'>puddytat</a></li>
 <li><a href='bookkeeper.html'>the bookkeeper and the bees</a></li>
