--- a/square-ruins.html
+++ b/square-ruins.html
@@ -14,7 +14,7 @@
 <body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
 <header id="title-block-header">
 <h1 class="title">the square ruins</h1>
-<p class="author">Bhante Sujato</p>
+<p class="author">Bhikkhu Sujato</p>
 </header>
 <p>There was, once, a deepness to the night: shadow of leaf beneath shadow of tree, where the stars lost their way in the jasmine. The air possessed the transparency of a black diamond, so that the eye, deprived of stimulation, opened to its fullest extent, snatching up even a single photon. The snore of monkeys was the least of the chorus summoned by the forest lost in darkness, the ceaseless murmur of countless hidden creatures, the creak of trees, the hush of the breeze, the soft padding of a tarantula on the leaves of the forest floor. </p>
 <p>It was a land of ever-changing waters, where a vast river, crazy as a god, could spring up in a season and then be gone forever. But not here; this river ran its course deep and steady, isolating an island. Its thick stream flowed slow as tar, hiding its viscous eddies. Wider than a tiger’s leap, its black surface mirroring the black above, it swallowed all who tried to cross it. </p>
