--- a/nothing-here.html
+++ b/nothing-here.html
@@ -14,7 +14,7 @@
 <body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
 <header id="title-block-header">
 <h1 class="title">nothing here is what it once was</h1>
-<p class="author">Bhante Sujato, Feb 2023</p>
+<p class="author">Bhikkhu Sujato, Feb 2023</p>
 </header>
 <blockquote>
   <p>A Buddhist perspective in contribution to <em>Statements from the Soul: The Moral Case for the Uluru Statement from the Heart</em>, edited by Shireen Morris and Damien Freeman, La Trobe University Press, 2023.</p>
