--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@ header p
 			<h3>vinaya—miscellaneous discussions</h3>
 			<p>Some writings on the monastic discipline.</p>
 			<ul>
-				<li><a href='trustworthy.html'>A Trustworthy Woman: why the Buddha told his monks to believe what she said
-</a></li>
+				<li><a href='trustworthy.html'>A Trustworthy Woman:</a> why the Buddha told his monks to believe what she said</li>
 			</ul>
 </section>
 
