--- a/mother-earth.html
+++ b/mother-earth.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Bhante Sujato" />
-  <title>nothing here is what it once was</title>
+  <title>mother earth</title>
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body><nav><a href='../#mainmatter'>🏡&nbsp;&nbsp;home</a></nav><main><article>
