--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ header p
 		<section class='essays'>
 			
 	
-			<h3>pali—miscellaneous discussions</h3>
+			<h3>pali</h3>
 			<p>Over the years I have written numerous essays, short and longish, discussing various aspects of Pali, mostly dealing with translation issues. These were mostly originally published on the SuttaCentral forum, and here I collect them.</p>
 			<ul>
 				<li><a href='dharani-lake.html'>Lake Dharani; or, when the earth is a lake</a></li>
@@ -169,7 +169,7 @@ header p
 		<section class='essays'>
 			
 	
-			<h3>vinaya—miscellaneous discussions</h3>
+			<h3>vinaya</h3>
 			<p>Some writings on the monastic discipline.</p>
 			<ul>
 				<li><a href='trustworthy.html'>A Trustworthy Woman:</a> why the Buddha told his monks to believe what she said</li>
@@ -184,6 +184,8 @@ header p
 			<ul>
 				<li><a href='nothing-here.html'>nothing here is what it once was</a> A Buddhist perspective in contribution to <em>Statements from the Soul: The Moral Case for the Uluru Statement from the Heart</em>.</li>
 				<li><a href='cowboys.html'>the cowboy and the modern man</a> Reflections on masculinity and myth.</li>
+				<li><a href='interdependence.html'>interdependence</a></li>
+				<li><a href='rebels.html'>six kinds of spiritual rebel</a></li>
 			</ul>
 </section>
 		<section class='essays'>
