--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ header p
 				<li><a href='cowboys.html'>the cowboy and the modern man</a> Reflections on masculinity and myth.</li>
 				<li><a href='interdependence.html'>interdependence</a></li>
 				<li><a href='rebels.html'>six kinds of spiritual rebel</a></li>
+				<li><a href='war.html'>deeds of war both bright and dark</a></li>
 			</ul>
 </section>
 		<section class='essays'>
