--- a/dharani-lake.html
+++ b/dharani-lake.html
@@ -19,6 +19,7 @@
 	
 		<article>
 <h1>Lake Dhāraṇī; or, when the earth is a lake</h1>
+ṁṃśṣṭḍḷṛ
 <p>One of the common words in Indic for “Mother Earth” is <em>dharaṇī</em>, literally the “bearer”, a word also used for pregnant women. </p>
 <p><a href="https://discourse.suttacentral.net/t/mother-earth/14623">https://discourse.suttacentral.net/t/mother-earth/14623</a></p>
 <p><em>Dharaṇī</em> seems to be found in only two places in early Pali. In Thag 1.50, I had previously translated it as “mother earth”. Norman has:</p>
