--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@ header p
 				<p>When the world falls apart, does anything stay in place? What if the survivors were those who have already lost everything? This is a story about life at the end of the world in Parramatta. It is a fairy tale of apocalypse, a cli-fi novel of despair and enlightenment for the reasonably hopeless.</p>
 			</section>
 
+						<section class='minisite'>
+				
+				<a href='/wbrrbs.html'><h3>White Bones Red Rot Black Snakes</h3></a>
+				<p>A Buddhist mythology of the feminine.</p>
+			</section>
+
 		<section class='essays'>
 			
 	
