--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ header p
 			<h3>vinaya</h3>
 			<p>Some writings on the monastic discipline.</p>
 			<ul>
+				<li><a href='bvs.html'>Bhikkhunī Vinaya Studies</a> Research & reflections on monastic discipline for Buddhist nuns</li>
 				<li><a href='trustworthy.html'>A Trustworthy Woman:</a> why the Buddha told his monks to believe what she said</li>
 			</ul>
 </section>
