--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ header p
 				<li><a href='interdependence.html'>interdependence</a></li>
 				<li><a href='rebels.html'>six kinds of spiritual rebel</a></li>
 				<li><a href='war.html'>deeds of war both bright and dark</a></li>
+				<li><a href='transgood.html'>transgood</a> how trans people have changed, and are changing, our world for the better</li>
 			</ul>
 </section>
 		<section class='essays'>
