--- a/transgood.html
+++ b/transgood.html
@@ -18,7 +18,7 @@
 </header>
 <ul>
 <li>Originally published on Sujato's Blog, 5/12/2014.</li>
-<li>Republished at sujato.me, 13/3/2025</li>
+<li>Republished at sujato.me, 13/3/2025.</li>
 <li>Global Atmospheric CO2 when published: 398.21 ppm.</li>
 <li>Global Atmospheric CO2 when republished: 429.15 ppm.</li>
 </ul>
